k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pix-api-service
  namespace: default
  labels:
    app: pix-api
spec:
  selector:
    app: pix-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
